# Loc-NeRF

./: CMakeLists.txt  README.md  package.xml  requirements.txt  setup.py
cfg/: jackal.yaml  llff.yaml  llff_global.yaml
launch/: navigate.launch
logs/global_loc/: gt_fern_15_poses.npy  gt_fern_7_poses.npy  gt_fortress_11_poses.npy  gt_fortress_19_poses.npy  gt_horns_13_poses.npy  gt_horns_6_poses.npy  gt_room_14_poses.npy  gt_room_17_poses.npy  gt_room_3_poses.npy  initial_pose_fern_3_poses.npy  initial_pose_fern_7_poses.npy  initial_pose_fortress_11_poses.npy  initial_pose_fortress_16_poses.npy  initial_pose_fortress_9_poses.npy  initial_pose_horns_13_poses.npy  initial_pose_horns_1_poses.npy  initial_pose_room_14_poses.npy  initial_pose_room_18_poses.npy  initial_pose_room_3_poses.npy  mocnerf_fern_15_forward_passes.npy  mocnerf_fern_15_poses.npy  mocnerf_fern_18_poses.npy  mocnerf_fern_2_poses.npy  mocnerf_fern_7_forward_passes.npy  mocnerf_fortress_11_forward_passes.npy  mocnerf_fortress_11_poses.npy  mocnerf_fortress_16_forward_passes.npy  mocnerf_fortress_16_poses.npy  mocnerf_fortress_19_forward_passes.npy  mocnerf_fortress_19_poses.npy  mocnerf_fortress_1_poses.npy  mocnerf_horns_5_poses.npy  mocnerf_horns_8_poses.npy  mocnerf_room_14_poses.npy  mocnerf_room_18_forward_passes.npy  mocnerf_room_18_poses.npy  mocnerf_room_6_forward_passes.npy  mocnerf_started_fern_15_poses.npy  (+9 more)
rviz/: rviz.rviz
src/: full_filter.py  full_nerf_helpers.py  nav_node.py  navigator_base.py  particle_filter.py  render_helpers.py  utils.py
tools/: eval_logs.py  ros_to_jpg.py
(+149 files in other folders)
